cmake_minimum_required(VERSION 3.8)
project(drive_to_some_pos)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(std_msgs REQUIRED)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

set(dependencies "geometry_msgs" "rclcpp" "nav_msgs" "std_msgs")

add_executable(drive_to_pos_node src/drive_to_pos_node.cpp)
ament_target_dependencies(drive_to_pos_node ${dependencies})

install(TARGETS
  drive_to_pos_node
  DESTINATION lib/${PROJECT_NAME})

ament_package()
